1.0.2.0
-------
- Remove old tax rate priority
- Include child entities in features.json to inform JTL-Wawi if they are supported or not
- Implement new interface for Garbage Collection
- Fix missing parent information for configurable children (http://developer.jtl-software.de/issues/11584)

1.0.1.0
-------
- Show synchronization URL in backend

1.0.0.0
-------
- First public release