@@ -4,6 +4,7 @@
 - Include child entities in features.json to inform JTL-Wawi if they are supported or not
 - Implement new interface for Garbage Collection
 - Fix missing parent information for configurable children (http://developer.jtl-software.de/issues/11584)
+- Experimental support for handling payment transactions
 
 1.0.1.0
 -------
